Auto stash before merge of "main" and "origin/main"

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,14 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello word</h1>
+  <section id="home">
+    <header class="header">
+      <div class="header_icon">
+        <img src="" alt="">
+      </div>
+    </header>
+  </section>
   
-  
-
   <script src="../script.js"></script>
 </body>
 </html>
