--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,57 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="styles.css">
   <title>Document</title>
 </head>
 <body>
   <section id="home">
-    <header class="header">
-      <div class="header_icon">
-        <img src="" alt="">
-      </div>
-    </header>
+    <div class="container">
+      <header class="header">
+        <a href="/" class="header_icon">
+          <img src="../images/image%201.png" alt="logo">
+        </a>
+        <div class="nav">
+          <div class="nav_top">
+            <div class="nav_top_wrapper">
+              <a href="" class="nav_top_wrapper_item">О компании</a>
+              <a href="" class="nav_top_wrapper_item">Отзывы</a>
+              <a href="" class="nav_top_wrapper_item">Фото работ</a>
+              <a href="" class="nav_top_wrapper_item">Акции</a>
+              <a href="" class="nav_top_wrapper_item">Контакты</a>
+            </div>
+            <a href="tel:88462334153" class="nav_top_tel">
+              <i class="fas fa-phone-alt"></i>
+              8 (846) 233-41-53
+            </a>
+          </div>
+          <div class="nav_bottom">
+            <a href="" class="nav_bottom_item">сделать рассчет</a>
+            <a href="" class="nav_bottom_item">Вызвать замерщика</a>
+            <a href="" class="nav_bottom_item">пластиковые окна</a>
+            <a href="" class="nav_bottom_item">балконы и лоджии</a>
+            <a href="" class="nav_bottom_item">отделка балконов и лоджий</a>
+          </div>
+        </div>
+        <div class="mobile_nav">
+          <a href="tel:88462334153" class="mobile_nav_tel">
+            8 (846) 233-41-53
+          </a>
+        </div>
+        <div class="burger" id="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </header>
+    </div>
+   
+    
   </section>
   
   <script src="../script.js"></script>
