--- a/src/index.html
+++ b/src/index.html
@@ -59,41 +59,41 @@
         <div class="text_wrapper_paragraph_text">Современное стильное решение для вашего дома.<br>
           Даёт много естественного света и расширяет пространство</div>
       </div>
-      <div class="glazing_wrappeer">
-        <div class="glazing_wrappeer_one">
-          <div class="glazing_wrappeer_one_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/toolbox .png">
-            <div class="glazing_wrappeer_one_icon_text">Остеклили
+      <div class="glazing_wrapper">
+        <div class="glazing_wrapper_one">
+          <div class="glazing_wrapper_one_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/toolbox .png">
+            <div class="glazing_wrapper_one_icon_text">Остеклили
               более 30 000
               адресов</div>
           </div>
-          <div class="glazing_wrappeer_one_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/recycling .png">
-            <div class="glazing_wrappeer_one_icon_text">Гарантия на
+          <div class="glazing_wrapper_one_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/recycling .png">
+            <div class="glazing_wrapper_one_icon_text">Гарантия на
               металлоконструкции</div>
           </div>
-          <div class="glazing_wrappeer_one_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/window.png">
-            <div class="glazing_wrappeer_one_icon_text">Широкий ассортимент
+          <div class="glazing_wrapper_one_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/window.png">
+            <div class="glazing_wrapper_one_icon_text">Широкий ассортимент
               специально для
               частных лиц</div>
           </div>
         </div>
-        <div class="glazing_wrappeer_two"></div>
-        <div class="glazing_wrappeer_two_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/paint-brush .png">
-            <div class="glazing_wrappeer_one_icon_text">Окрашиваем
+        <div class="glazing_wrapper_two"></div>
+        <div class="glazing_wrapper_two_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/paint-brush .png">
+            <div class="glazing_wrapper_one_icon_text">Окрашиваем
               конструкции
               после сварки</div>
         </div>
-        <div class="glazing_wrappeer_two_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/Frame .png">
-            <div class="glazing_wrappeer_one_icon_text">Бесплатный
+        <div class="glazing_wrapper_two_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/Frame .png">
+            <div class="glazing_wrapper_one_icon_text">Бесплатный
               замер и доставка</div>
         </div>
-        <div class="glazing_wrappeer_two_icon">
-            <img class="glazing_wrappeer_one_icon_img" src="../images/calendar.png">
-            <div class="glazing_wrappeer_one_icon_text">Рассрочка
+        <div class="glazing_wrapper_two_icon">
+            <img class="glazing_wrapper_one_icon_img" src="../images/calendar.png">
+            <div class="glazing_wrapper_one_icon_text">Рассрочка
               0%</div>
         </div>
       </div>
@@ -107,7 +107,7 @@
 
           <div class="form_wrapper">
             <div class="form_wrapper_left">
-              <img src="/images/Windows_PL.jpg" >
+              <img src="../images/Windows_PL.jpg" >
             </div>
 
             <div class="form_wrapper_right">
